# openapi.json
@@ -1,7 +1,7 @@
 {
   "info": {
     "title": "SampleAPI",
-    "version": "2025-12-16T16:30:21Z"
+    "version": "2025-12-17T12:09:09Z"
   },
   "servers": [
     {
@@ -10,68 +10,13 @@
           "default": "v1"
         },
         "apiID": {
-          "default": "a76kiq01je"
+          "default": "vlwmh8whxj"
         }
       },
       "url": "http://localhost:4566/_aws/execute-api/{apiID}/{basePath}"
     }
   ],
   "paths": {
-    "/create-user": {
-      "post": {
-        "responses": {}
-      }
-    },
-    "/get-object": {
-      "get": {
-        "responses": {}
-      }
-    },
-    "/hello-world": {
-      "get": {
-        "responses": {
-          "200": {
-            "description": "200 response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Empty"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "500 response",
-            "content": {}
-          }
-        }
-      },
-      "options": {
-        "responses": {
-          "204": {
-            "description": "204 response",
-            "headers": {
-              "Access-Control-Allow-Headers": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "Access-Control-Allow-Methods": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "Access-Control-Allow-Origin": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            },
-            "content": {}
-          }
-        }
-      }
-    },
     "/login": {
       "options": {
         "responses": {
@@ -102,8 +47,93 @@
         "responses": {}
       }
     },
+    "/hello-world": {
+      "options": {
+        "responses": {
+          "204": {
+            "description": "204 response",
+            "headers": {
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {}
+          }
+        }
+      },
+      "get": {
+        "responses": {
+          "200": {
+            "description": "200 response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Empty"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "500 response",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/create-user": {
+      "post": {
+        "responses": {}
+      }
+    },
+    "/get-object": {
+      "get": {
+        "responses": {}
+      }
+    },
     "/send-mail": {
       "post": {
+        "responses": {}
+      }
+    },
+    "/challenge": {
+      "options": {
+        "responses": {
+          "204": {
+            "description": "204 response",
+            "headers": {
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {}
+          }
+        }
+      },
+      "get": {
         "responses": {}
       }
     }
